[package]
name = "re_build_examples"
authors.workspace = true
description = "Build rerun example RRD files"
edition.workspace = true
homepage.workspace = true
include.workspace = true
license.workspace = true
publish = false
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true


[dependencies]
re_build_tools.workspace = true
re_format.workspace = true

# External
anyhow.workspace = true
argh.workspace = true
indicatif.workspace = true
rayon.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_yaml.workspace = true
serde_json.workspace = true
