[package]
name = "re_build_examples_manifest"
authors.workspace = true
description = "Build the rerun examples manifest JSON file"
edition.workspace = true
homepage.workspace = true
include.workspace = true
license.workspace = true
publish = false
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true


[dependencies]
re_build_tools.workspace = true
re_examples.workspace = true

# External
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
