[package]
name = "re_build_info"
authors.workspace = true
description = "Information about the build. Use together with re_build_tools"
edition.workspace = true
homepage.workspace = true
include.workspace = true
license.workspace = true
publish = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true


[features]
default = []

## Enable (de)serialization using serde.
serde = ["dep:serde"]


[dependencies]

# Optional dependencies:
serde = { workspace = true, optional = true, features = ["derive", "rc"] }
